# simcoupe

./: .gitignore  CMakeLists.txt  ChangeLog.md  Compile.bat  Compile.sh  ReadMe-WASM.md  ReadMe.md  Run.bat  agents.md  index.html  run.sh
.github/workflows/: deploy.yml
Base/: ATA.cpp  ATA.h  AVI.cpp  AVI.h  AtaAdapter.cpp  AtaAdapter.h  CPU.cpp  CPU.h  Disk.h  Drive.cpp  Drive.h  Frame.cpp  GIF.cpp  GIF.h  HardDisk.h  Keyboard.cpp  Keyboard.h  Memory.cpp  Options.cpp  Options.h  SAMIO.cpp  SAMIO.h  SavePNG.cpp  SavePNG.h  Sound.cpp  Stream.cpp  Tape.cpp  WAV.cpp  WAV.h
SDL/: Audio.cpp  Audio.h  Input.cpp  Input.h  UI.cpp
package/: make_wasm_release.ps1  make_wasm_release.sh
wasm/: CMakeLists.txt  CMakeLists_debug.txt
wasm/deploy/: index.html  simcoupe.data  simcoupe.js  simcoupe.wasm
wasm/src/: Main.cpp  OSD.cpp  SDL20.h  SDL20_GL3.cpp  SDL20_GL3.h  SimCoupe.h  UI.cpp  whereami.c  whereami.h
wasm/src/Base/: AVI.cpp  AVI.h  AtaAdapter.h  Disk.h  Frame.h  GIF.cpp  GIF.h  HardDisk.cpp  Options.h  SAMIO.cpp  SAMIO.h  SavePNG.cpp  Sound.cpp  Tape.cpp  WAV.cpp  WAV.h
wasm/src/SDL/: Audio.cpp  OSD.cpp  SDL20.cpp  UI.cpp
